objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Access_Code__c</fullName>
        <label>Access Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Population__c</fullName>
        <formula>UsageEndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Population</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Code__c</fullName>
        <label>Application Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <label>Application Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Length__c</fullName>
        <formula>LEN(Name)</formula>
        <label>Asset # Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Automotive_Application_Flag__c</fullName>
        <label>Automotive Application Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIS_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BIS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Date__c</fullName>
        <label>Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Customer_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to identify if the Asset belongs to a Cash Customer</description>
        <label>Cash Customer Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Critical_Part_List_Number__c</fullName>
        <label>Critical Part List Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Phase_Code__c</fullName>
        <label>Design Phase Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <description>To store the ERP system against each Asset</description>
        <label>ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MoveX</fullName>
                </value>
                <value>
                    <fullName>BMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETO_Conversion_Date__c</fullName>
        <label>ETO Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETO_Old_PSN__c</fullName>
        <label>ETO-Old PSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Bill_To_Code__c</fullName>
        <description>Engine Bill-To Code</description>
        <label>Engine Bill-To Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Code__c</fullName>
        <defaultValue>IF(NOT(ISPICKVAL($User.ERP__c, &apos;BMS&apos;)), &quot;BB&quot;, &quot;&quot;)</defaultValue>
        <label>Engine Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Name__c</fullName>
        <label>Engine Family Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Family__c</fullName>
        <defaultValue>IF(NOT(ISPICKVAL($User.ERP__c, &apos;BMS&apos;)), &quot;BB&quot;, &quot;&quot;)</defaultValue>
        <label>Engine Family</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Manufacturer__c</fullName>
        <label>Engine Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADIM DIESEL</fullName>
                </value>
                <value>
                    <fullName>AJAX</fullName>
                </value>
                <value>
                    <fullName>ALCO POWER</fullName>
                </value>
                <value>
                    <fullName>ALLIS CHALMERS</fullName>
                </value>
                <value>
                    <fullName>CARRIER</fullName>
                </value>
                <value>
                    <fullName>CATERPILLAR TRACTOR CO.</fullName>
                </value>
                <value>
                    <fullName>CHEVROLET DIVISION</fullName>
                </value>
                <value>
                    <fullName>CLARK</fullName>
                </value>
                <value>
                    <fullName>COOPER BESSEMER</fullName>
                </value>
                <value>
                    <fullName>COOPER INDUSTRIES</fullName>
                </value>
                <value>
                    <fullName>COOPER SUPERIOR</fullName>
                </value>
                <value>
                    <fullName>CROSSLEY</fullName>
                </value>
                <value>
                    <fullName>CUMMINS</fullName>
                </value>
                <value>
                    <fullName>DAIMLER BENZ</fullName>
                </value>
                <value>
                    <fullName>DAYCO CORP.</fullName>
                </value>
                <value>
                    <fullName>DETROIT DIESEL CORP.</fullName>
                </value>
                <value>
                    <fullName>DEUTZ MWM</fullName>
                </value>
                <value>
                    <fullName>DIESEL RECON</fullName>
                </value>
                <value>
                    <fullName>ELECTORMOTIVE</fullName>
                </value>
                <value>
                    <fullName>FAIRBANKS MORSE ENGINES</fullName>
                </value>
                <value>
                    <fullName>FIAT</fullName>
                </value>
                <value>
                    <fullName>FLEETGUARD</fullName>
                </value>
                <value>
                    <fullName>FORD MOTOR COMPANY</fullName>
                </value>
                <value>
                    <fullName>FREIGHTLINER CORP</fullName>
                </value>
                <value>
                    <fullName>GENERAC</fullName>
                </value>
                <value>
                    <fullName>GENERAL MOTORS CORP.</fullName>
                </value>
                <value>
                    <fullName>GE TRANSPORATION SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>HATZ DIESEL</fullName>
                </value>
                <value>
                    <fullName>HERCULES ENGINES INC.</fullName>
                </value>
                <value>
                    <fullName>HINO MOTORS LTD.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Configuration__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.ERP__c, &apos;BMS&apos;), &quot;OTHER&quot;, &apos;&apos;)</defaultValue>
        <label>Unit Type / Equipment Configuration</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Id__c</fullName>
        <label>Equipment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND (2 OR 3)) OR 4</booleanFilter>
            <filterItems>
                <field>Address.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Address.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Address.Status__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>CSS Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <externalId>true</externalId>
        <label>Individual Item Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Labor_Multiplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Labor Multiplier influences labor rates in BMS</inlineHelpText>
        <label>Labor Multiplier</label>
        <referenceTo>FSL_Labor_Multiplier__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Make_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Make Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CSS_Make_Model_Access__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SRTData</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CSS_Make_Model_Access__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <defaultValue>IF($Profile.Name = &apos;CSS_Service_Advanced&apos;, &apos;UNLISTED&apos;, &apos;&apos;)</defaultValue>
        <label>Make</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marine_Application_Flag__c</fullName>
        <label>Marine Application Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <defaultValue>IF($Profile.Name = &apos;CSS_Service_Advanced&apos;, &apos;ALL&apos;, &apos;&apos;)</defaultValue>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveX_ContactId__c</fullName>
        <label>MoveX ContactId</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveX_Customer_Address_1__c</fullName>
        <label>Customer Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveX_Customer_Address_2__c</fullName>
        <label>Customer Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveX_Customer_Address_3__c</fullName>
        <label>Customer Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveX_Email_ID__c</fullName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MoveX_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MoveX_SiteId__c</fullName>
        <label>MoveX SiteId</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Warranty Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM_SP_Code__c</fullName>
        <label>OEM/SP Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paccar_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paccar Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Identification__c</fullName>
        <label>Parent Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Application_Code__c</fullName>
        <label>Product Application Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Application_Description__c</fullName>
        <label>Product Application Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_Engine_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recon Engine Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <label>Registration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate safety related requirements in Service Order</description>
        <inlineHelpText>Indicate safety related requirements in Service Order</inlineHelpText>
        <label>Safety Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <label>Sales Segment</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model__c</fullName>
        <defaultValue>&quot;NONCUMMINS&quot;</defaultValue>
        <label>Service Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>This Field is used to store the ship date of Asset.</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Site for the Asset</description>
        <label>Site</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>IAM_CDH_Cross_references__c.IAM_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>IAM_CDH_Cross_references__c.FSL_Site_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>IAM_CDH_Cross_references__c.FSL_Site_Status__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IAM_CDH_Cross_references__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>CASE($User.ERP__c, &quot;BMS&quot;, &quot;BMS&quot;, &quot;MOVEX&quot;, &quot;MOVEX&quot;, &quot;MOVEX-MYD&quot;, &quot;MOVEX-MYD&quot;, &quot;MOVEX-UK&quot;, &quot;MOVEX-UK&quot;, &quot;MOVEX-190&quot;,&quot;MOVEX-190&quot;,&quot;MOVEX-200&quot;,&quot;MOVEX-200&quot;,&quot;MOVEX-250&quot;,&quot;MOVEX-250&quot;,&quot;MOVEX-270&quot;,&quot;MOVEX-270&quot;,&quot;MOVEX-175&quot;,&quot;MOVEX-175&quot;,&quot;MOVEX-CSP&quot;,&quot;MOVEX-CSP&quot;,&quot;MOVEX-CDK&quot;,&quot;MOVEX-CDK&quot;,&quot;Siebel&quot;)</defaultValue>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>MOVEX</fullName>
                </value>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>MOVEX-UK</fullName>
                </value>
                <value>
                    <fullName>MOVEX-MYD</fullName>
                </value>
                <value>
                    <fullName>MOVEX-190</fullName>
                </value>
                <value>
                    <fullName>MOVEX-200</fullName>
                </value>
                <value>
                    <fullName>MOVEX-250</fullName>
                </value>
                <value>
                    <fullName>MOVEX-270</fullName>
                </value>
                <value>
                    <fullName>MOVEX-175</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CSP</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CDK</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                    <isActive>false</isActive>
                    <label>ERP</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <isActive>false</isActive>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_PSN__c</fullName>
        <externalId>true</externalId>
        <label>Type-PSN</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engines</fullName>
                    <default>true</default>
                    <label>Engines</label>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>FIREPUMP</fullName>
                </value>
                <value>
                    <fullName>ENGINE</fullName>
                </value>
                <value>
                    <fullName>GENSET</fullName>
                </value>
                <value>
                    <fullName>ENGINE CORE</fullName>
                </value>
                <value>
                    <fullName>SWITCH GEAR</fullName>
                </value>
                <value>
                    <fullName>TRANSFER SWITCH</fullName>
                </value>
                <value>
                    <fullName>TRANSMISSIONS</fullName>
                </value>
                <value>
                    <fullName>BATTERY</fullName>
                </value>
                <value>
                    <fullName>PARSYS</fullName>
                </value>
                <value>
                    <fullName>MARINE GEAR</fullName>
                </value>
                <value>
                    <fullName>ONAN</fullName>
                </value>
                <value>
                    <fullName>REFRIG</fullName>
                </value>
                <value>
                    <fullName>KOMATSU EQUIPMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.ERP__c, &apos;BMS&apos;), &quot;OTHER&quot;, &apos;&apos;)</defaultValue>
        <label>Unit Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>Engine_Family_Code__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Service_Model__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>Warranty_Start_Date__c</columns>
        <columns>Access_Code__c</columns>
        <columns>Application_Description__c</columns>
        <columns>Application__c</columns>
        <columns>Equipment_Id__c</columns>
        <columns>Application_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>Assets_Modified_this_week</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Application__c</columns>
        <columns>Build_Date__c</columns>
        <columns>Engine_Manufacturer__c</columns>
        <columns>Type__c</columns>
        <columns>Type_PSN__c</columns>
        <columns>Warranty_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Assets Modified this week</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Created</fullName>
        <active>true</active>
        <label>Customer Created</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL_Detail_Asset_Record_Type</fullName>
        <active>true</active>
        <label>FSL Detail Asset Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Cummins</fullName>
        <active>true</active>
        <label>Non Cummins</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSL_Asset_Edit_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name)  &amp;&amp;  NOT(ISNEW())  &amp;&amp;  ($Profile.Name  = &apos;CSS_Service_Advanced&apos; || $Profile.Name  = &apos;EVL_Dealer_Advanced&apos; ||$Profile.Name  = &apos;EVL_Dealer_Technician&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Cannot edit Asset Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Make_Model_Field_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISNEW()), 
  TEXT(Engine_Manufacturer__c) = &apos;CUMMINS&apos;,
  OR(
    ISCHANGED(Make__c), 
    ISCHANGED(Model__c), 
    ISCHANGED(Application__c), 
    ISCHANGED(Engine_Family_Code__c), 
    ISCHANGED(Warranty_Start_Date__c)
  ),
  NOT(
    OR(
      $Profile.Name=&apos;System Administrator&apos;,
      $Profile.Name=&apos;CSS_Support&apos;,
      $Profile.Name=&apos;CSS Integration&apos;,
      $Profile.Name=&apos;EVL_Dealer_Advanced&apos;,
      $UserRole.Name=&apos;Factory&apos;,
      $Profile.Name=&apos;EVL_Dealer_Technician&apos;
    )
  )
)</errorConditionFormula>
        <errorMessage>Make, Model, Engine Family Code, Application, and Warranty Start Date fields are not editable for Cummins Asset.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_PSN_Edit_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name) &amp;&amp; NOT(ISNEW()) &amp;&amp; ($Profile.Name = &apos;CSS_Service_Advanced&apos; || $Profile.Name = &apos;CSS_Service_Technician&apos; || $Profile.Name = &apos;CSS_CPS_Advanced&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>PSN (Asset Name) can not be changed once the Asset is created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Type_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Type__c) &amp;&amp; 
NOT(ISNEW()) &amp;&amp; 
($Profile.Name  = &apos;CSS_Service_Advanced&apos; || 
 $Profile.Name  = &apos;CSS_Service_Technician&apos; || 
 $Profile.Name  = &apos;CSS_CPS_Advanced&apos; ||
 $Profile.Name = &apos;EVL_Dealer_Advanced&apos; ||
 $Profile.Name = &apos;EVL_Dealer_Technician&apos;
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type can not be changed once the Asset is created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Type_PSN_Edit</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Type_PSN__c ) &amp;&amp; 
NOT(ISNEW()) &amp;&amp; 
($Profile.Name  = &apos;CSS_Service_Advanced&apos; || 
 $Profile.Name  = &apos;CSS_Service_Technician&apos; || 
 $Profile.Name  = &apos;CSS_CPS_Advanced&apos;
)</errorConditionFormula>
        <errorDisplayField>Type_PSN__c</errorDisplayField>
        <errorMessage>Type PSN can not be changed once the Asset is created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VINEdit_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( PRIORVALUE( VIN__c ) &lt;&gt; null, ISCHANGED(VIN__c), OR($Profile.Name = &apos;CSS_Service_Advanced&apos;,
   $Profile.Name = &apos;CSS_Service_Technician&apos;,
   $Profile.Name = &apos;CSS_CPS_Advanced&apos;
  )
)</errorConditionFormula>
        <errorDisplayField>VIN__c</errorDisplayField>
        <errorMessage>VIN can not be changed once value is received from Siebel.</errorMessage>
    </validationRules>
</CustomObject>